welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: ')' expected but 'for' found.
	for (i <- 0 to (getWorldHeight()-1)) {
        ^